Fix timer text not centered bug

--- a/src/index.css
+++ b/src/index.css
@@ -149,8 +149,8 @@ h4.timer-times-avg {
 }
 
 .timer-text {
-  margin-top: calc(20%); /* TODO figure out why the text baseline is off */
-  height: 100%;
+  max-height: 100%;
+  line-height: initial;
 }
 
 .timer-text-medium {
